fixe scrollbar bug

--- a/base.css
+++ b/base.css
@@ -7,6 +7,12 @@
 }
 /**--------- container responsive----------- **/
 
+@media (max-width: 575px) {
+  .container {
+    max-width: 350px;
+  }
+
+}
 @media (min-width: 576px) {
   .container {
     max-width: 540px;
@@ -27,7 +33,7 @@
 
 @media (min-width: 1200px) {
   .container {
-    max-width: 1140px;
+    max-width: 960px;
   }
 }
 /** -------row ------**/
@@ -36,8 +42,8 @@
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
+  margin-right: 15px;
+  margin-left: 15px;
 }
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col,
 .col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm,
